@@ -20,13 +20,12 @@ package com.axelor.utils.helpers.file;
 import com.axelor.i18n.I18n;
 import com.axelor.meta.MetaFiles;
 import com.axelor.utils.exception.UtilsExceptionMessage;
-import com.axelor.utils.helpers.ExceptionHelper;
 import com.google.common.base.Preconditions;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
@@ -78,11 +77,7 @@ public final class PdfHelper {
   public static String getFileLinkFromPdfFile(File file, String fileName) {
 
     String fileLink = "ws/files/report/" + file.getName();
-    try {
-      fileLink += "?name=" + URLEncoder.encode(fileName, "UTF-8");
-    } catch (UnsupportedEncodingException e) {
-      ExceptionHelper.error(e);
-    }
+    fileLink += "?name=" + URLEncoder.encode(fileName, StandardCharsets.UTF_8);
     return fileLink;
   }
 
